--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 	<meta name="author" content="Krunal Patel" />
 	
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat"/>
     <link rel="stylesheet" href="css/sudoku.css" />
     
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   	<script type="text/javascript" src="js/sudoku.js" ></script>
   	<script type="text/javascript">
   		$(document).ready(function () {
